tdf#169680 DOCX import: fix unexpected stretched image

Open the bugdoc, the music notes picture inside is not readable.

This went wrong in commit edda1e5fc8113aa4744e32f97c96a3cc311485ca (DOCX
import: lazy-read images without external headers, 2018-04-20), and
later commit c3ce373227433f40d686847a22e78651bedbab24 (tdf#156593
FILEOPEN OOXML: image shown in full instead of cropped, 2023-10-27)
fixed a similar problem, this bugdoc is still bad.

Note how the second commit looks for the .tiff extension, while this
bugdoc has a .TIF image. Fix the problem by looking for both extensions,
in a case-insensitive way.

A future possibility would be to improve OInputCompStream's XPropertySet
implementation, so next to its Compressed and Size properties, it would
also expose the image/tiff MIME type, and then we would not have to
guess content based on the file extension.

Change-Id: I81519119bae698bf1cca34792fcf1aa6587b48a8
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/195542
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>
Tested-by: Jenkins