oox/Module_oox.mk
@@ -37,6 +37,7 @@ $(eval $(call gb_Module_add_check_targets,oox,\
     CppunitTest_oox_mcgr \
     CppunitTest_oox_testscene3d \
     CppunitTest_oox_wpc_drawing_canvas \
+    CppunitTest_oox_helper \
 ))
 endif
 
